# AR-Anomaly-Detection

./: .gitignore  AnomalyFile_2026-04-17.csv  AnomalyFile_2026-04-21.csv  README.md  V0_PROPOSAL.md  anomaly_agent.py  pyproject.toml  slack_summary.json
ar_anomaly_v0/: README.md  bq_io.py  config.py  detect.py  main.py  severity.py  slices.py
ar_anomaly_v0/baselines/: flat_mean.py  prophet_model.py
