[project]
name = "ar-anomaly-detection"
version = "0.1.0"
description = "AR anomaly detection engine for Checkout.com payment data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-bigquery-storage>=2.25.0",
    "db-dtypes>=1.2",
    "pandas>=2.0",
    "prophet>=1.1.5",
    "scipy>=1.11",
]

[tool.uv]
package = false
